adding event for navbar list

--- a/css/leon.css
+++ b/css/leon.css
@@ -125,9 +125,9 @@ html {
   right: 5px;
   top: -20px;
 }
-.header .links:hover ul {
+/* .header .links:hover ul {
   display: block;
-}
+} */
 .header .links ul li a {
   display: block;
   padding: 15px;
